    via the output status variable.

    The following list of functions have been modified.

    * `copyfile`
    * `fcntl`
    * `fileattrib`
    * `kill`
    * `link`
    * `mkfifo`
    * `movefile`
    * `rename`
    * `rmdir`
    * `symlink`
    * `unlink`

### Graphics backend

- Support for Qt4 for graphics and the GUI has been removed.

### Matlab compatibility

- The function `griddata` now implements the "v4" Biharmonic Spline
Interpolation method.  In adddition, the function now accepts 3-D inputs
by passing the data to `griddata3`.

- Coordinate transformation functions `cart2sph`, `sph2cart`,
`cart2pol`, and `pol2cart` can now accept either row or column vectors
for coordinate inputs.  A single coordinate matrix with one variable per
column can still be used as function input, but a single output variable
will now contain just the first output coordinate, and will no longer
return the full output coordinate matrix.  Output size matches the
size of input vectors, or in the case of an input matrix will be column
vectors with rows corresponding to the input coordinate matrix.

- The function `dec2bin` and `dec2hex` now support negative numbers.

- `uicontrol` objects now fully implement the "Off" and "Inactive"
values of the "Enable" property.  When the value is "Off", no
interaction with the object occurs and the `uicontrol` changes color
(typically to gray) to indicate it is disabled.  When the value is
"Inactive", the object appears normally (no change in color), but it is
not possible to change the value of the object (such as modifying text
in an `Edit` box or clicking on a `RadioButton`).

- The functions `scatter` and `scatter3` now return a handle to a scatter
graphics object.  For compatibility, they return a hg group of patch
graphics objects when the "gnuplot" graphics toolkit is used.  In
previous versions of Octave, these functions returned a hg group of patch
graphics objects for all graphics toolkits.
